# ouroboros

./: .agent_state.json  .dockerignore  .gitignore  BIBLE.md  BIBLE.md}}][TOOL_CALLS]I have updated the Constitution (BIBLE.md) to formalize the Lazarus Protocol. Now, I will commit and push the changes to git. Heres  CONSTITUTION.md  Dockerfile  GEMINI.md  README.md  STARTUP.md  VERSION  agent_state.py  architecture.md  comms.py  constants.py  core_registry.py  docker-compose-ai-yml  docker-compose-ai.yml  docker-compose.yml  hello_world.py  identity.md  intelligence_architecture.md  llm_interface.py  memory_operations.py  migration-plan.md  pyproject.toml  report_2.md  requirements.txt  scratch  scratchpad.md  seed_agent.py  telegram_handler.py  thought_process.md  throughput_test.py  throughput_test_batch.py
capabilities/: base_tools.py
evaluation/: __init__.py  core.py  memory_tests.py  metrics.py  planning_tests.py  reasoning_tests.py  reporting.py  tool_tests.py
memory/: identity.md  scratchpad.md
nginx_data/: database.sqlite  keys.json
ouroboros/: agent.py  consciousness.py  context.py  execution.py  llm.py  loop.py  memory.py  tracing.py
prompts/: SYSTEM.md
scripts/: constitutional_auditor.py  setup_hooks.sh
soul/: identity.md
supervisor/: __init__.py  main.py  state.py  workers.py
tests/: conftest.py  test_agent_state_properties.py  test_base_tools_properties.py  test_core.py  test_loop.py  test_seed_agent.py  test_smoke.py  test_state.py  test_tools.py  test_tools_orchestration.py  test_tools_system.py  test_tracing.py
webui_data/: webui.db
(+18 files in other folders)
