[project]
name = "ouroboros"
version = "6.2.0"
description = "Self-creating agent"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[project.scripts]
ouroboros = "supervisor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
