[project]
name = "ouroboros"
version = "4.1.0"
description = "Ouroboros (Self-Evolving AI)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "types-requests",
    "trafilatura>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
cache_dir = "/tmp/.pytest_cache"

[tool.mypy]
cache_dir = "/tmp/.mypy_cache"

